--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 ---
 layout: default
 title: Tiago Belintani
@@ -10,12 +9,7 @@ title: Tiago Belintani
   body {
     font-family: 'Courier New', monospace;
     color: #333333;
-    background: linear-gradient(rgba(255,255,255,0.95), rgba(255,255,255,0.95)),
-                url('assets/images/imagem1.jpg'),
-                url('assets/images/imagem2.jpg');
-    background-blend-mode: lighten;
-    background-size: cover;
-    background-position: center center;
+    background: #ffffff;
     margin: 0;
     padding: 0;
   }
@@ -79,17 +73,39 @@ title: Tiago Belintani
     color: #007b8a;
   }
 
+  .top-images {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    margin-bottom: 40px;
+    flex-wrap: wrap;
+  }
+
+  .top-images img {
+    width: 460px;
+    max-width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  }
+
   .footer-banner {
     margin-top: 80px;
-    height: 220px;
-    background: url('assets/images/vinicius-henrique-photography-A7GwggrhXm4-unsplash.jpg') center bottom no-repeat;
+    height: 300px;
+    width: 100%;
+    background: linear-gradient(to top, rgba(255,255,255,1), rgba(255,255,255,0.7)),
+                url('assets/images/vinicius-henrique-photography-A7GwggrhXm4-unsplash.jpg') center bottom no-repeat;
     background-size: cover;
+    opacity: 0.7;
     border-top: 4px solid #ccc;
-    opacity: 0.9;
   }
 </style>
 
 <div class="container">
+  <div class="top-images">
+    <img src="assets/images/imagem1.jpg" alt="DNA Theme">
+    <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
+  </div>
+
   <h1>Tiago Belintani</h1>
   <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
