--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: Tiago Belintani
 
   body {
     font-family: 'Courier New', monospace;
-    color: #333333;
-    background: #ffffff;
+    color: #333;
+    background: #fdfdfd;
     margin: 0;
     padding: 0;
   }
@@ -20,11 +20,26 @@ title: Tiago Belintani
     padding: 40px 20px;
   }
 
+  .top-images {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    margin-bottom: 40px;
+    flex-wrap: wrap;
+  }
+
+  .top-images img {
+    width: 100%;
+    max-width: 460px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    object-fit: cover;
+  }
+
   h1, h2, h3 {
     text-align: center;
-    color: #111111;
+    color: #111;
     font-family: 'Space Grotesk', sans-serif;
-    letter-spacing: 0.5px;
     margin-bottom: 0.3em;
   }
 
@@ -40,7 +55,7 @@ title: Tiago Belintani
   p, li {
     font-size: 1.1em;
     line-height: 1.8em;
-    color: #333333;
+    text-align: justify;
   }
 
   ul {
@@ -73,83 +88,30 @@ title: Tiago Belintani
     color: #007b8a;
   }
 
-  .top-images {
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-    margin-bottom: 40px;
-    flex-wrap: wrap;
-  }
-
-  .top-images img {
-    width: 460px;
-    max-width: 100%;
-    border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-  }
-
   .footer-banner {
     margin-top: 80px;
-    height: 300px;
     width: 100%;
-    background: linear-gradient(to top, rgba(255,255,255,1), rgba(255,255,255,0.7)),
+    height: 300px;
+    background: linear-gradient(to top, rgba(255,255,255,1), rgba(255,255,255,0.5), rgba(255,255,255,0)),
                 url('assets/images/vinicius-henrique-photography-A7GwggrhXm4-unsplash.jpg') center bottom no-repeat;
     background-size: cover;
-    opacity: 0.7;
-    border-top: 4px solid #ccc;
+    background-attachment: fixed;
+    opacity: 0.8;
   }
 </style>
 
 <div class="container">
+
+  <!-- Imagens lado a lado, alinhadas com o conteúdo -->
   <div class="top-images">
-    <img src="assets/images/imagem1.jpg" alt="DNA Theme">
+    <img src="assets/images/imagem1.jpg" alt="DNA theme">
     <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
   </div>
 
   <h1>Tiago Belintani</h1>
   <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
-  <p style="text-align: justify;">
+  <p>
     I am a postdoctoral researcher at São Paulo State University (UNESP), where I delve into the evolutionary biology, systematics, and phylogenomics of key Neotropical organisms. My research focuses primarily on two fascinating and ecologically significant groups: the <em>Triatominae</em> (blood-feeding insects and vectors of Chagas disease) and the <em>Theraphosidae</em> (the often misunderstood tarantulas).<br><br>
     
-    My academic background merges classical training in zoology with modern bioinformatics and genomic analysis. From dusty entomological collections to high-throughput DNA sequencing, my work seeks to understand the hidden patterns of diversification, adaptation, and biogeography. I combine tools such as geometric morphometrics, phylogenetic inference, and comparative genomics to trace evolutionary lineages and untangle species complexes.<br><br>
-
-    I believe science is both a narrative and an exploration. Each sequence, specimen, or cladogram contributes to a broader understanding of life’s tangled branches — and I’m here to map them with curiosity and rigor.
-  </p>
-
-  <div class="section">
-    <h2>📄 Academic Profiles</h2>
-    <ul>
-      <li><a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR" target="_blank">Google Scholar</a></li>
-      <li><a href="https://bv.fapesp.br/pt/pesquisador/728865/tiago-belintani/" target="_blank">FAPESP</a></li>
-      <li><a href="https://www.researchgate.net/profile/Tiago-Belintani" target="_blank">ResearchGate</a></li>
-      <li><a href="https://orcid.org/0000-0001-9485-1145" target="_blank">ORCID</a></li>
-      <li><a href="http://lattes.cnpq.br/8948388411348223" target="_blank">Lattes</a></li>
-      <li><a href="https://www.webofscience.com/wos/author/record/AAL-8293-2021" target="_blank">ResearcherID</a></li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>🎓 Education</h2>
-    <ul>
-      <li>PhD – São Paulo State University (UNESP)</li>
-      <li>MSc – University of Campinas (Unicamp)</li>
-      <li>Visiting Researcher – University of Idaho (UIDAHO)</li>
-      <li>BSc – São Paulo State University (UNESP)</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>📬 Contact</h2>
-    <p>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
-  </div>
-
-  <div class="section cv-link">
-    <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
-      <img src="assets/images/3846805.png" alt="CV icon">Access My CV
-    </a>
-  </div>
-</div>
-
-<div class="footer-banner"></div>
+    My academic background merges classical training in zoology with modern bioinformatics and genomic analysis. From dusty entomological collections to high-throughput DNA sequencing, my work seeks to understand the hidden patterns of diversification, adaptation, and biogeography. I combine tools such as geometric morphometrics, phylogenetic
