--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Tiago Belintani
   }
 
   .container {
-    max-width: 960px;
+    max-width: 1120px;
     margin: 0 auto;
     padding: 40px 20px;
   }
@@ -29,8 +29,8 @@ title: Tiago Belintani
   }
 
   .top-images img {
-    width: 100%;
-    max-width: 460px;
+    flex: 1 1 48%;
+    max-width: 100%;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     object-fit: cover;
@@ -98,11 +98,19 @@ title: Tiago Belintani
     background-attachment: fixed;
     opacity: 0.8;
   }
+
+  footer {
+    text-align: center;
+    font-size: 0.9em;
+    color: #666;
+    padding: 20px 0;
+    margin-top: -10px;
+  }
 </style>
 
 <div class="container">
 
-  <!-- Imagens lado a lado, alinhadas com o conteúdo -->
+  <!-- Imagens lado a lado -->
   <div class="top-images">
     <img src="assets/images/imagem1.jpg" alt="DNA theme">
     <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
@@ -114,4 +122,50 @@ title: Tiago Belintani
   <p>
     I am a postdoctoral researcher at São Paulo State University (UNESP), where I delve into the evolutionary biology, systematics, and phylogenomics of key Neotropical organisms. My research focuses primarily on two fascinating and ecologically significant groups: the <em>Triatominae</em> (blood-feeding insects and vectors of Chagas disease) and the <em>Theraphosidae</em> (the often misunderstood tarantulas).<br><br>
     
-    My academic background merges classical training in zoology with modern bioinformatics and genomic analysis. From dusty entomological collections to high-throughput DNA sequencing, my work seeks to understand the hidden patterns of diversification, adaptation, and biogeography. I combine tools such as geometric morphometrics, phylogenetic
+    My academic background merges classical training in zoology with modern bioinformatics and genomic analysis. From dusty entomological collections to high-throughput DNA sequencing, my work seeks to understand the hidden patterns of diversification, adaptation, and biogeography. I combine tools such as geometric morphometrics, phylogenetic inference, and comparative genomics to trace evolutionary lineages and untangle species complexes.<br><br>
+
+    I believe science is both a narrative and an exploration. Each sequence, specimen, or cladogram contributes to a broader understanding of life’s tangled branches — and I’m here to map them with curiosity and rigor.
+  </p>
+
+  <div class="section">
+    <h2>📄 Academic Profiles</h2>
+    <ul>
+      <li><a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR" target="_blank">Google Scholar</a></li>
+      <li><a href="https://bv.fapesp.br/pt/pesquisador/728865/tiago-belintani/" target="_blank">FAPESP</a></li>
+      <li><a href="https://www.researchgate.net/profile/Tiago-Belintani" target="_blank">ResearchGate</a></li>
+      <li><a href="https://orcid.org/0000-0001-9485-1145" target="_blank">ORCID</a></li>
+      <li><a href="http://lattes.cnpq.br/8948388411348223" target="_blank">Lattes</a></li>
+      <li><a href="https://www.webofscience.com/wos/author/record/AAL-8293-2021" target="_blank">ResearcherID</a></li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>🎓 Education</h2>
+    <ul>
+      <li>PhD – São Paulo State University (UNESP)</li>
+      <li>MSc – University of Campinas (Unicamp)</li>
+      <li>Visiting Researcher – University of Idaho (UIDAHO)</li>
+      <li>BSc – São Paulo State University (UNESP)</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>📬 Contact</h2>
+    <p>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
+    <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
+  </div>
+
+  <div class="section cv-link">
+    <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
+      <img src="assets/images/3846805.png" alt="CV icon">Access My CV
+    </a>
+  </div>
+</div>
+
+<!-- Faixa visual inferior -->
+<div class="footer-banner"></div>
+
+<!-- Rodapé com copyright -->
+<footer>
+  © 2025 Tiago Belintani
+</footer>
