--- a/index.html
+++ b/index.html
@@ -22,18 +22,31 @@ title: Tiago Belintani
 
   .top-images {
     display: flex;
-    gap: 20px;
     justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
     margin-bottom: 40px;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
   }
 
   .top-images img {
-    flex: 1 1 48%;
+    width: 45%;
     max-width: 100%;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     object-fit: cover;
+    flex-shrink: 0;
+  }
+
+  @media (max-width: 800px) {
+    .top-images {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .top-images img {
+      width: 90%;
+    }
   }
 
   h1, h2, h3 {
@@ -169,3 +182,4 @@ title: Tiago Belintani
 <footer>
   © 2025 Tiago Belintani
 </footer>
+
