--- a/index.html
+++ b/index.html
@@ -12,12 +12,33 @@ title: Tiago Belintani
     background: #fdfdfd;
     margin: 0;
     padding: 0;
+    min-height: 100vh;
+    position: relative;
+  }
+
+  /* Background centralizado e translúcido */
+  .background-centralizada {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 720px; /* Ajuste conforme desejar */
+    height: 440px; /* Ajuste conforme desejar */
+    transform: translate(-50%, -50%);
+    background: url('assets/images/vinicius-henrique-photography-A7GwggrhXm4-unsplash.jpg') center center no-repeat;
+    background-size: cover;
+    opacity: 0.25;  /* Transparência sutil */
+    border-radius: 36px;
+    z-index: 0;
+    pointer-events: none;
+    box-shadow: 0 8px 40px rgba(0,0,0,0.10);
   }
 
   .container {
     max-width: 1120px;
     margin: 0 auto;
     padding: 40px 20px;
+    position: relative;
+    z-index: 1;
   }
 
   .top-images {
@@ -46,6 +67,11 @@ title: Tiago Belintani
 
     .top-images img {
       width: 90%;
+    }
+    .background-centralizada {
+      width: 95vw;
+      height: 240px;
+      border-radius: 22px;
     }
   }
 
@@ -121,6 +147,9 @@ title: Tiago Belintani
   }
 </style>
 
+<!-- Background centralizado e translúcido -->
+<div class="background-centralizada"></div>
+
 <div class="container">
 
   <!-- Imagens lado a lado -->
@@ -182,4 +211,3 @@ title: Tiago Belintani
 <footer>
   © 2025 Tiago Belintani
 </footer>
-
