--- a/index.html
+++ b/index.html
@@ -6,33 +6,28 @@ title: Tiago Belintani
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap');
 
+  body::before {
+    content: "";
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+    width: 100vw;
+    height: 100vh;
+    background: url('assets/images/vinicius-henrique-photography-A7GwggrhXm4-unsplash.jpg') center center no-repeat;
+    background-size: cover;
+    opacity: 0.25;
+    z-index: 0;
+    pointer-events: none;
+  }
   body {
+    position: relative;
+    z-index: 1;
     font-family: 'Courier New', monospace;
     color: #333;
     background: #fdfdfd;
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    position: relative;
   }
-
-  /* Background centralizado e translúcido */
-  .background-centralizada {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    width: 720px; /* Ajuste conforme desejar */
-    height: 440px; /* Ajuste conforme desejar */
-    transform: translate(-50%, -50%);
-    background: url('assets/images/vinicius-henrique-photography-A7GwggrhXm4-unsplash.jpg') center center no-repeat;
-    background-size: cover;
-    opacity: 0.25;  /* Transparência sutil */
-    border-radius: 36px;
-    z-index: 0;
-    pointer-events: none;
-    box-shadow: 0 8px 40px rgba(0,0,0,0.10);
-  }
-
   .container {
     max-width: 1120px;
     margin: 0 auto;
@@ -40,7 +35,6 @@ title: Tiago Belintani
     position: relative;
     z-index: 1;
   }
-
   .top-images {
     display: flex;
     justify-content: center;
@@ -49,7 +43,6 @@ title: Tiago Belintani
     margin-bottom: 40px;
     flex-wrap: nowrap;
   }
-
   .top-images img {
     width: 45%;
     max-width: 100%;
@@ -58,75 +51,57 @@ title: Tiago Belintani
     object-fit: cover;
     flex-shrink: 0;
   }
-
   @media (max-width: 800px) {
     .top-images {
       flex-direction: column;
       align-items: center;
     }
-
     .top-images img {
       width: 90%;
     }
-    .background-centralizada {
-      width: 95vw;
-      height: 240px;
-      border-radius: 22px;
-    }
   }
-
   h1, h2, h3 {
     text-align: center;
     color: #111;
     font-family: 'Space Grotesk', sans-serif;
     margin-bottom: 0.3em;
   }
-
   h1 {
     font-size: 3em;
   }
-
   h3 {
     font-size: 1.6em;
     font-weight: 500;
   }
-
   p, li {
     font-size: 1.1em;
     line-height: 1.8em;
     text-align: justify;
   }
-
   ul {
     padding-left: 20px;
   }
-
   a {
     color: #006c7b;
     font-weight: bold;
     text-decoration: none;
   }
-
   a:hover {
     color: #004f59;
     text-decoration: underline;
   }
-
   .section {
     margin-bottom: 50px;
   }
-
   .cv-link img {
     width: 48px;
     vertical-align: middle;
     margin-right: 12px;
   }
-
   .cv-link a {
     font-size: 1.2em;
     color: #007b8a;
   }
-
   .footer-banner {
     margin-top: 80px;
     width: 100%;
@@ -136,19 +111,19 @@ title: Tiago Belintani
     background-size: cover;
     background-attachment: fixed;
     opacity: 0.8;
+    position: relative;
+    z-index: 1;
   }
-
   footer {
     text-align: center;
     font-size: 0.9em;
     color: #666;
     padding: 20px 0;
     margin-top: -10px;
+    position: relative;
+    z-index: 1;
   }
 </style>
-
-<!-- Background centralizado e translúcido -->
-<div class="background-centralizada"></div>
 
 <div class="container">
 
