--- a/index.html
+++ b/index.html
@@ -217,10 +217,36 @@ title: Tiago Belintani
       </svg>
     </div>
     <ul>
-       <li>PhD – University of Campinas (Unicamp)</li>
-      <li>MSc – São Paulo State University (UNESP)</li>
-      <li>Visiting Researcher – University of Idaho (UIDAHO)</li>
-      <li>BSc – University of Araraquara (UNIARA)</li>
+      <li>
+        PhD – Animal Biodiversity, Anthropogenic Relationships, Environment, and Parasitology<br>
+        <span style="font-size:0.95em; color:#666;">
+          Institute of Biology, University of Campinas (Unicamp)
+        </span>
+      </li>
+      <li>
+        MSc – Biotechnology Applied to Biological Sciences<br>
+        <span style="font-size:0.95em; color:#666;">
+          Faculty of Pharmaceutical Sciences, São Paulo State University (UNESP)
+        </span>
+      </li>
+      <li>
+        Visiting Researcher – Department of Entomology, Plant Pathology and Nematology<br>
+        <span style="font-size:0.95em; color:#666;">
+          College of Agricultural and Life Sciences, University of Idaho (UIDAHO)
+        </span>
+      </li>
+      <li>
+        BSc – Biological Sciences<br>
+        <span style="font-size:0.95em; color:#666;">
+          University of Araraquara (UNIARA)
+        </span>
+      </li>
+      <li>
+        Teacher Licensure – Biological Sciences<br>
+        <span style="font-size:0.95em; color:#666;">
+          University of Araraquara (UNIARA)
+        </span>
+      </li>
     </ul>
   </div>
 
@@ -252,4 +278,5 @@ title: Tiago Belintani
   © 2025 Tiago Belintani<br>
   <span style="font-size:0.85em;color:#aaa;">Sapientia et disciplina</span>
 </footer>
+
 
