--- a/index.html
+++ b/index.html
@@ -184,9 +184,7 @@ title: Tiago Belintani
 
   <p class="intro">
     I am a postdoctoral researcher at São Paulo State University (UNESP), where I delve into the evolutionary biology, systematics, and phylogenomics of key Neotropical organisms. My research focuses primarily on two fascinating and ecologically significant groups: the <em>Triatominae</em> (blood-feeding insects and vectors of Chagas disease) and the <em>Theraphosidae</em> (the often misunderstood tarantulas).<br><br>
-    
     My academic background merges classical training in zoology with modern bioinformatics and genomic analysis. From dusty entomological collections to high-throughput DNA sequencing, my work seeks to understand the hidden patterns of diversification, adaptation, and biogeography. I combine tools such as geometric morphometrics, phylogenetic inference, and comparative genomics to trace evolutionary lineages and untangle species complexes.<br><br>
-
     I believe science is both a narrative and an exploration. Each sequence, specimen, or cladogram contributes to a broader understanding of life’s tangled branches — and I’m here to map them with curiosity and rigor.
   </p>
 
@@ -262,6 +260,27 @@ title: Tiago Belintani
     <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
   </div>
 
+  <!-- Seção Gótica Moderna: Minha Foto -->
+  <div style="display: flex; justify-content: center; align-items: flex-end; margin-bottom: 70px; margin-top: 48px;">
+    <div style="background: linear-gradient(120deg,#212228 80%,#2e5962 100%); border-radius: 24px 24px 38px 38px; box-shadow: 0 7px 40px 0 rgba(30,30,40,0.27), 0 1.5px 6px 0 #23253640; padding: 44px 38px 32px 38px; text-align: center; max-width: 400px; border: 1.5px solid #22272a;">
+      <img src="assets/images/foto-tiago.jpg" 
+           alt="Tiago Belintani" 
+           style="width: 148px; height: 148px; object-fit: cover; border-radius: 50%; border: 5px solid #222d32; box-shadow: 0 2px 32px #00506860; margin-bottom: 14px;">
+      <div style="font-family: 'Space Grotesk', serif; font-size: 1.19em; color: #f1f4fa; letter-spacing: 0.01em; margin-bottom: 3px;">
+        <strong>Tiago Belintani</strong>
+      </div>
+      <div style="font-size:1.02em; color:#b9c7d6; margin-bottom: 9px;">Evolutionary Bioinformatician &amp; Explorer</div>
+      <hr style="border: none; border-top: 1.2px solid #405065; margin: 14px auto 13px auto; width: 70%;">
+      <div style="font-size:1em; color:#98a7c3; font-style:italic; letter-spacing:0.01em;">
+        “In shadows and light, the patterns emerge.<br>
+        Curiosity remains, a gothic tradition.”
+      </div>
+      <svg width="78" height="18" style="margin: 16px auto 0 auto; display: block;" aria-hidden="true">
+        <path d="M5,14 Q39,1 73,14" stroke="#2983a6" stroke-width="2.1" fill="none" opacity="0.37"/>
+      </svg>
+    </div>
+  </div>
+
   <!-- Section: CV -->
   <div class="section cv-link">
     <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
@@ -278,4 +297,3 @@ title: Tiago Belintani
   © 2025 Tiago Belintani<br>
   <span style="font-size:0.85em;color:#aaa;">Sapientia et disciplina</span>
 </footer>
-
