--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ title: Tiago Belintani
     z-index: 1;
   }
 
-  /* Extra: Drop Cap for First Paragraph */
+  /* Drop Cap para o primeiro parágrafo */
   p.intro::first-letter {
     float: left;
     font-size: 3.1em;
@@ -152,13 +152,34 @@ title: Tiago Belintani
     padding-right: 8px;
     font-family: 'Space Grotesk', sans-serif;
   }
-  /* Extra: Card Effect on Academic Section */
+  /* Card Effect on Academic Section */
   .section ul {
     background: rgba(245,251,251,0.7);
     border-radius: 12px;
     box-shadow: 0 1px 10px rgba(0,124,138,0.07);
     padding: 16px 24px;
     margin-bottom: 0;
+  }
+
+  /* Foto pessoal: apenas a imagem, moderna, discreta */
+  .profile-photo {
+    display: flex;
+    justify-content: center;
+    margin: 40px 0 40px 0;
+  }
+  .profile-photo img {
+    width: 170px;
+    height: 170px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0 4px 16px rgba(0,108,123,0.13);
+    border: 4px solid #e8f6f7;
+    background: #fff;
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+  .profile-photo img:hover {
+    transform: scale(1.04);
+    box-shadow: 0 6px 24px rgba(0,108,123,0.18);
   }
 </style>
 
@@ -260,25 +281,9 @@ title: Tiago Belintani
     <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
   </div>
 
-  <!-- Seção Gótica Moderna: Minha Foto -->
-  <div style="display: flex; justify-content: center; align-items: flex-end; margin-bottom: 70px; margin-top: 48px;">
-    <div style="background: linear-gradient(120deg,#212228 80%,#2e5962 100%); border-radius: 24px 24px 38px 38px; box-shadow: 0 7px 40px 0 rgba(30,30,40,0.27), 0 1.5px 6px 0 #23253640; padding: 44px 38px 32px 38px; text-align: center; max-width: 400px; border: 1.5px solid #22272a;">
-      <img src="assets/images/foto-tiago.jpg" 
-           alt="Tiago Belintani" 
-           style="width: 148px; height: 148px; object-fit: cover; border-radius: 50%; border: 5px solid #222d32; box-shadow: 0 2px 32px #00506860; margin-bottom: 14px;">
-      <div style="font-family: 'Space Grotesk', serif; font-size: 1.19em; color: #f1f4fa; letter-spacing: 0.01em; margin-bottom: 3px;">
-        <strong>Tiago Belintani</strong>
-      </div>
-      <div style="font-size:1.02em; color:#b9c7d6; margin-bottom: 9px;">Evolutionary Bioinformatician &amp; Explorer</div>
-      <hr style="border: none; border-top: 1.2px solid #405065; margin: 14px auto 13px auto; width: 70%;">
-      <div style="font-size:1em; color:#98a7c3; font-style:italic; letter-spacing:0.01em;">
-        “In shadows and light, the patterns emerge.<br>
-        Curiosity remains, a gothic tradition.”
-      </div>
-      <svg width="78" height="18" style="margin: 16px auto 0 auto; display: block;" aria-hidden="true">
-        <path d="M5,14 Q39,1 73,14" stroke="#2983a6" stroke-width="2.1" fill="none" opacity="0.37"/>
-      </svg>
-    </div>
+  <!-- Foto Pessoal Simples -->
+  <div class="profile-photo">
+    <img src="assets/images/foto-tiago.jpg" alt="Tiago Belintani">
   </div>
 
   <!-- Section: CV -->
@@ -292,7 +297,7 @@ title: Tiago Belintani
 <!-- Faixa visual inferior -->
 <div class="footer-banner"></div>
 
-<!-- Rodapé com copyright -->
+<!-- Rodapé -->
 <footer>
   © 2025 Tiago Belintani<br>
   <span style="font-size:0.85em;color:#aaa;">Sapientia et disciplina</span>
