--- a/index.html
+++ b/index.html
@@ -161,25 +161,26 @@ title: Tiago Belintani
     margin-bottom: 0;
   }
 
-  /* Foto pessoal: apenas a imagem, moderna, discreta */
+  /* Foto pessoal: exibe imagem inteira, moderna e centralizada */
   .profile-photo {
     display: flex;
     justify-content: center;
     margin: 40px 0 40px 0;
   }
   .profile-photo img {
-    width: 170px;
-    height: 170px;
-    object-fit: cover;
-    border-radius: 50%;
-    box-shadow: 0 4px 16px rgba(0,108,123,0.13);
-    border: 4px solid #e8f6f7;
+    width: 260px;
+    max-width: 98vw;
+    height: auto;
+    object-fit: contain;
+    border-radius: 18px;
+    box-shadow: 0 4px 18px rgba(0,108,123,0.13);
+    border: 3px solid #e8f6f7;
     background: #fff;
     transition: transform 0.2s, box-shadow 0.2s;
   }
   .profile-photo img:hover {
     transform: scale(1.04);
-    box-shadow: 0 6px 24px rgba(0,108,123,0.18);
+    box-shadow: 0 6px 28px rgba(0,108,123,0.18);
   }
 </style>
 
@@ -219,86 +220,4 @@ title: Tiago Belintani
     </div>
     <ul>
       <li><a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR" target="_blank">Google Scholar</a></li>
-      <li><a href="https://bv.fapesp.br/pt/pesquisador/728865/tiago-belintani/" target="_blank">FAPESP</a></li>
-      <li><a href="https://www.researchgate.net/profile/Tiago-Belintani" target="_blank">ResearchGate</a></li>
-      <li><a href="https://orcid.org/0000-0001-9485-1145" target="_blank">ORCID</a></li>
-      <li><a href="http://lattes.cnpq.br/8948388411348223" target="_blank">Lattes</a></li>
-      <li><a href="https://www.webofscience.com/wos/author/record/AAL-8293-2021" target="_blank">ResearcherID</a></li>
-    </ul>
-  </div>
-
-  <!-- Section: Education -->
-  <div class="section">
-    <h2>🎓 Education</h2>
-    <div style="display:flex;justify-content:center;">
-      <svg height="16" width="100" style="margin-bottom:1em;">
-        <path d="M5,10 Q50,0 95,10" stroke="#007b8a" stroke-width="2" fill="none" opacity="0.25"/>
-      </svg>
-    </div>
-    <ul>
-      <li>
-        PhD – Animal Biodiversity, Anthropogenic Relationships, Environment, and Parasitology<br>
-        <span style="font-size:0.95em; color:#666;">
-          Institute of Biology, University of Campinas (Unicamp)
-        </span>
-      </li>
-      <li>
-        MSc – Biotechnology Applied to Biological Sciences<br>
-        <span style="font-size:0.95em; color:#666;">
-          Faculty of Pharmaceutical Sciences, São Paulo State University (UNESP)
-        </span>
-      </li>
-      <li>
-        Visiting Researcher – Department of Entomology, Plant Pathology and Nematology<br>
-        <span style="font-size:0.95em; color:#666;">
-          College of Agricultural and Life Sciences, University of Idaho (UIDAHO)
-        </span>
-      </li>
-      <li>
-        BSc – Biological Sciences<br>
-        <span style="font-size:0.95em; color:#666;">
-          University of Araraquara (UNIARA)
-        </span>
-      </li>
-      <li>
-        Teacher Licensure – Biological Sciences<br>
-        <span style="font-size:0.95em; color:#666;">
-          University of Araraquara (UNIARA)
-        </span>
-      </li>
-    </ul>
-  </div>
-
-  <!-- Section: Contact -->
-  <div class="section">
-    <h2>📬 Contact</h2>
-    <div style="display:flex;justify-content:center;">
-      <svg height="16" width="100" style="margin-bottom:1em;">
-        <path d="M5,10 Q50,0 95,10" stroke="#007b8a" stroke-width="2" fill="none" opacity="0.25"/>
-      </svg>
-    </div>
-    <p>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
-  </div>
-
-  <!-- Foto Pessoal Simples -->
-  <div class="profile-photo">
-    <img src="assets/images/foto-tiago.jpg" alt="Tiago Belintani">
-  </div>
-
-  <!-- Section: CV -->
-  <div class="section cv-link">
-    <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
-      <img src="assets/images/3846805.png" alt="CV icon">Access My CV
-    </a>
-  </div>
-</div>
-
-<!-- Faixa visual inferior -->
-<div class="footer-banner"></div>
-
-<!-- Rodapé -->
-<footer>
-  © 2025 Tiago Belintani<br>
-  <span style="font-size:0.85em;color:#aaa;">Sapientia et disciplina</span>
-</footer>
+      <li><a href="https:/
