--- a/index.html
+++ b/index.html
@@ -266,43 +266,19 @@ footer {
         </ul>
     </div>
 
-    <!-- Education -->
+    <!-- Explore / Markdown Links -->
     <div class="section">
-        <h2>🎓 Education</h2>
+        <h2>📚 Explore</h2>
         <div class="section-divider">
             <svg height="16" width="100">
                 <path d="M5,10 Q50,0 95,10"></path>
             </svg>
         </div>
         <ul>
-            <li>PhD – Animal Biodiversity, Anthropogenic Relationships, Environment, and Parasitology<br>
-                <span style="font-size:0.95em; color:#666;">Institute of Biology, University of Campinas (Unicamp)</span>
-            </li>
-            <li>MSc – Biotechnology Applied to Biological Sciences<br>
-                <span style="font-size:0.95em; color:#666;">Faculty of Pharmaceutical Sciences, São Paulo State University (UNESP)</span>
-            </li>
-            <li>Visiting Researcher – Department of Entomology, Plant Pathology and Nematology<br>
-                <span style="font-size:0.95em; color:#666;">College of Agricultural and Life Sciences, University of Idaho (UIDAHO)</span>
-            </li>
-            <li>BSc – Biological Sciences<br>
-                <span style="font-size:0.95em; color:#666;">University of Araraquara (UNIARA)</span>
-            </li>
-            <li>Teacher Licensure – Biological Sciences<br>
-                <span style="font-size:0.95em; color:#666;">University of Araraquara (UNIARA)</span>
-            </li>
+            <li><a href="contact.md" target="_blank">Contact</a></li>
+            <li><a href="publications.md" target="_blank">Publications</a></li>
+            <li><a href="research.md" target="_blank">Research</a></li>
         </ul>
-    </div>
-
-    <!-- Contact -->
-    <div class="section">
-        <h2>📬 Contact</h2>
-        <div class="section-divider">
-            <svg height="16" width="100">
-                <path d="M5,10 Q50,0 95,10"></path>
-            </svg>
-        </div>
-        <p>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
-        <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
     </div>
 
     <!-- CV -->
@@ -325,3 +301,4 @@ footer {
 
 </body>
 </html>
+
